Use a list of roles instead of single string
